fixing ERROR messages when running tests